<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPink">

    <TextView
        android:id="@+id/level_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5fda"
        android:gravity="center"
        android:text=""
        android:textColor="@color/levelButtonText"
        android:textSize="38sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/boxBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/boxBack"
        android:layout_width="400dp"
        android:layout_height="480dp"
        android:contentDescription="@string/game_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/game_main_back" />

    <com.example.android.catroad.ChessboardView
        android:id="@+id/chessboardView"
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/boxBack"
        app:layout_constraintEnd_toEndOf="@+id/boxBack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/boxBack"
        app:layout_constraintTop_toTopOf="@+id/boxBack"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/stepCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:shadowColor="#951"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/game_step"
        android:textColor="@color/toolButton"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeCount" />

    <TextView
        android:id="@+id/timeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:shadowColor="#951"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/game_time"
        android:textColor="@color/toolButton"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxBack"
        app:layout_constraintVertical_bias="0.35" />

    <ImageView
        android:id="@+id/newCat"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/out_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxBack"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/cat2" />

    <Button
        android:id="@+id/backLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/toolButton"
        android:onClick="backToLevel"
        android:text="@string/back_level"
        android:textColor="@color/backgroundPink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restartGame" />

    <Button
        android:id="@+id/restartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/toolButton"
        android:onClick="restartGame"
        android:text="@string/restart_game"
        android:textColor="@color/backgroundPink"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxBack"
        app:layout_constraintVertical_bias="0.3" />

</android.support.constraint.ConstraintLayout>