<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite">

    <TextView
        android:id="@+id/step_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/not_win"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/step_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/not_win"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/step_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/not_win"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/step_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/not_win"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:contentDescription="@string/game_name"
                app:srcCompat="@drawable/title2" />

            <Button
                android:id="@+id/level_1"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/levelButton"
                android:onClick="getLevel"
                android:text="@string/level_1"
                android:textColor="@color/levelButtonText"
                android:textSize="24sp" />

            <Button
                android:id="@+id/level_2"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/levelButton"
                android:onClick="getLevel"
                android:text="@string/level_2"
                android:textColor="@color/levelButtonText"
                android:textSize="24sp" />

            <Button
                android:id="@+id/level_3"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/levelButton"
                android:onClick="getLevel"
                android:text="@string/level_3"
                android:textColor="@color/levelButtonText"
                android:textSize="24sp" />

            <Button
                android:id="@+id/level_4"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/levelButton"
                android:onClick="getLevel"
                android:text="@string/level_4"
                android:textColor="@color/levelButtonText"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>